--- a/asm_tools/ollydbg/ollydbg.ini
+++ b/asm_tools/ollydbg/ollydbg.ini
@@ -55,7 +55,7 @@ Last edited scheme in options=0
 Last edited colour index in options=0
 Last edited highlighting in options=1
 Last edited highlighting index in options=0
-Warnmode when not administrator=1
+Warnmode when not administrator=0
 Warnmode for packed code in Analyzer=0
 Warnmode when INT3 breakpoint is corrupt=0
 Warnmode when breakpoint set on non-command=0
@@ -64,9 +64,9 @@ Warnmode when clipboard size too large=0
 Warnmode when all threads are suspended=0
 Warnmode when thread is changed=0
 Warnmode when process is still running=0
-Warnmode when active when closing OllyDbg=0
+Warnmode when active when closing OllyDbg=6
 Warnmode when unable to close process=0
-Warnmode when executable differs from udd=0
+Warnmode when executable differs from udd=7
 Warnmode when INT3 in udd has different cmd=0
 Warnmode when fixups are modified=0
 Warnmode when IAT is copied back to exe=0
@@ -246,9 +246,9 @@ Arguments[5]=
 Current dir[5]=
 Log file=log.txt
 Trace save file=trace.txt
-Data directory=D:\DOCS\UBB\ASC\asm_tools\ollydbg
-Standard library directory=D:\DOCS\UBB\ASC\asm_tools\ollydbg
-Plugin directory=D:\DOCS\UBB\ASC\asm_tools\ollydbg
+Data directory=C:\work\university\y3\S1\LFTC\labs\flex_bison_asm\asm_tools\ollydbg
+Standard library directory=C:\work\university\y3\S1\LFTC\labs\flex_bison_asm\asm_tools\ollydbg
+Plugin directory=C:\work\university\y3\S1\LFTC\labs\flex_bison_asm\asm_tools\ollydbg
 API help file=
 Alternative initialization file=
 Last viewed file=
@@ -274,7 +274,7 @@ Columns=54,102,240,1536
 Appearance=1,0,0,0,0
 [CPU registers]
 Appearance=1,0,1,0,0
-Local=0,0
+Local=1,66304
 [CPU Dump]
 Appearance=1,0,1,0,0
 Columns=54,288,102
@@ -283,6 +283,8 @@ Local=00011001
 Appearance=1,0,0,0,0
 Columns=54,60,30,1536
 Local=000A0104
+[Dialog placement]
+Edit register=462,122
 [Colour schemes]
 Scheme name[0]=Black on white
 Foreground_1[0]=*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*
