Solved temp var bug

--- a/asm_tools/ollydbg/ollydbg.ini
+++ b/asm_tools/ollydbg/ollydbg.ini
@@ -226,16 +226,16 @@ Activate speech=0
 Translate commands and registers=1
 Skip leading zeros in hex numbers=1
 [History]
-Executable[0]=C:\work\university\y3\S1\LFTC\labs\flex_bison_asm\asm_tools\npp\bagpula.exe
+Executable[0]=C:\work\university\y3\S1\LFTC\labs\flex_bison_asm\asm_tools\npp\ex1.exe
 Arguments[0]=
 Current dir[0]=
-Executable[1]=D:\work\check\test.exe
+Executable[1]=C:\work\university\y3\S1\LFTC\labs\flex_bison_asm\asm_tools\npp\bagpula.exe
 Arguments[1]=
 Current dir[1]=
-Executable[2]=D:\DOCS\UBB\ASC\asm_tools\1.exe
+Executable[2]=D:\work\check\test.exe
 Arguments[2]=
 Current dir[2]=
-Executable[3]=
+Executable[3]=D:\DOCS\UBB\ASC\asm_tools\1.exe
 Arguments[3]=
 Current dir[3]=
 Executable[4]=
