--- a/in.in
+++ b/in.in
@@ -6,9 +6,26 @@ int d;
 int e;
 
 begin_block
+	a = 2;
+	b = 3;
+	c = a + b;
+	d = c * 10;
+	e = d - 1;
+	e = e / 2;
+	write(a);
+	write(b);
+	write(c);
+	write(d);
+	write(e);
+	
 	read(a);
+	a = 100 * a;
 	write(a);
-	a = a + 4;
-	write(a);
+
+	read(b);
+	write(b);
+	b = b + 22;
+	write(b);
+
 end_block
 end_program
